tdf#43438: SwContentTree: handle ModeChanged notification

Change-Id: Iebb53af7fb06ebab6d5cdd1ce514480caec1b17e
Reviewed-on: https://gerrit.libreoffice.org/56985
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>